; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-output.c_prune_interleaved_packets.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-output.c_prune_interleaved_packets.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_output = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64, %struct.encoder_packet* }
%struct.encoder_packet = type { i64, i32, i64 }

@LOG_DEBUG = common dso_local global i32 0, align 4
@OBS_ENCODER_AUDIO = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.obs_output*)* @prune_interleaved_packets to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @prune_interleaved_packets(%struct.obs_output* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.obs_output*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store %struct.obs_output* %0, %struct.obs_output** %3, align 8
  store i64 0, i64* %4, align 8
  %6 = load %struct.obs_output*, %struct.obs_output** %3, align 8
  %7 = call i32 @prune_premature_packets(%struct.obs_output* %6)
  store i32 %7, i32* %5, align 4
  %8 = load i32, i32* %5, align 4
  %9 = icmp eq i32 %8, -1
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %29

11:                                               ; preds = %1
  %12 = load i32, i32* %5, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %11
  %15 = load i32, i32* %5, align 4
  %16 = sext i32 %15 to i64
  store i64 %16, i64* %4, align 8
  br label %20

17:                                               ; preds = %11
  %18 = load %struct.obs_output*, %struct.obs_output** %3, align 8
  %19 = call i64 @get_interleaved_start_idx(%struct.obs_output* %18)
  store i64 %19, i64* %4, align 8
  br label %20

20:                                               ; preds = %17, %14
  br label %21

21:                                               ; preds = %20
  %22 = load i64, i64* %4, align 8
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %28

24:                                               ; preds = %21
  %25 = load %struct.obs_output*, %struct.obs_output** %3, align 8
  %26 = load i64, i64* %4, align 8
  %27 = call i32 @discard_to_idx(%struct.obs_output* %25, i64 %26)
  br label %28

28:                                               ; preds = %24, %21
  store i32 1, i32* %2, align 4
  br label %29

29:                                               ; preds = %28, %10
  %30 = load i32, i32* %2, align 4
  ret i32 %30
}

declare dso_local i32 @prune_premature_packets(%struct.obs_output*) #1

declare dso_local i64 @get_interleaved_start_idx(%struct.obs_output*) #1

declare dso_local i32 @discard_to_idx(%struct.obs_output*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
